[package]
name = "storybuilder-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "1.0.10"
skim = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "*"
url = "2.3.1"
tokio-tungstenite = "*"
futures-util = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.18"
